--- a/Interface/templates/home.html
+++ b/Interface/templates/home.html
@@ -15,7 +15,7 @@
 {% endblock %}
 
 
-{% block title %}Projeto Alerta Dengue{% endblock %}
+{% block title %}Simulador de Processos Judiciais{% endblock %}
 
 {% block content %}
     <br>
