--- a/Interface/templates/mapaprocessos.html
+++ b/Interface/templates/mapaprocessos.html
@@ -37,9 +37,6 @@
             opacity: 0.7;
         }
     </style>
-    <script src="/static/js/heatmap.js"></script>
-    <script src="/static/js/heatmap-leaflet.js"></script>
-    <script src="/static/js/QuadTree.js"></script>
 
 {% endblock %}
 
@@ -57,29 +54,29 @@
                     <label for="HorizonteInput" class="col-sm-2 control-label">Horizonte de Previsão:</label>
 
                     <div class="col-sm-2">
-                        <input type="number" class="form-control" id="HorizonteInput" placeholder="90 dias">
+                        <input type="number" class="form-control" id="HorizonteInput" placeholder="90 dias" name="horizonte">
                     </div>
                     <label for="NotasToi" class="col-sm-2 control-label">Toi:</label>
 
                     <div class="col-sm-2">
-                        <input type="number" class="form-control" id="NotasToi" placeholder="100">
+                        <input type="number" class="form-control" id="NotasToi" placeholder="100" name="toi">
                     </div>
                     <label for="NotasCorte" class="col-sm-2 control-label">Corte:</label>
 
                     <div class="col-sm-2">
-                        <input type="number" class="form-control" id="NotasCorte" placeholder="100">
+                        <input type="number" class="form-control" id="NotasCorte" placeholder="100" name="corte">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="NotasNeg" class="col-sm-2 control-label">Negativação:</label>
 
                     <div class="col-sm-4">
-                        <input type="number" class="form-control" id="NotasNeg" placeholder="100">
+                        <input type="number" class="form-control" id="NotasNeg" placeholder="100" name="neg">
                     </div>
                     <label for="RecInput" class="col-sm-2 control-label">Prevalência de Reclamações:</label>
 
                     <div class="col-sm-4">
-                        <input type="number" class="form-control" id="RecInput" placeholder="30%">
+                        <input type="number" class="form-control" id="RecInput" placeholder="30%" name="rec" disabled>
                     </div>
                 </div>
                 <button type="submit" class="btn btn-default">Atualizar previsão</button>
@@ -92,7 +89,14 @@
     {% leaflet_map "main" callback="main_map_init" %}
 
     <script type="text/javascript">
+        function isInArray(el, array) {
+            return (array.indexOf(el) >= 0) ? true : false;
+        }
+        //Geocodigos dos municípios na área de concessão da Light
+        var area_light = [3302007, 3304557, 3302858, 3305109, 3303500, 3300456, 3300308, 3306107, 3303203, 3304144, 3306305, 3305554, 3301801, 3301702, 3302270, 3303856, 3305406,
+            3306008, 3304003, 3304409, 3300407, 3303609, 3304128, 3302809, 3303955, 3302908, 3306206, 3301207, 3303708, 3304524, 3300951];
 
+        var processos = {{ processos | safe}};
         var municipios = L.layerGroup();
         var info = L.control();
         var legend = L.control({position: 'bottomright'});
@@ -104,20 +108,21 @@
                     d > 500 ? '#BD0026' :
                             d > 200 ? '#E31A1C' :
                                     d > 100 ? '#FC4E2A' :
-                                            d > 50 ? '#FD8D3C' :
-                                                    d > 20 ? '#FEB24C' :
-                                                            d > 10 ? '#FED976' :
+                                            d > 30 ? '#FD8D3C' :
+                                                    d > 10 ? '#FEB24C' :
+                                                            d > 2 ? '#FED976' :
                                                                     '#FFEDA0';
         }
 
         function style(feature) {
+            feature.properties.processos = processos[parseInt(feature.properties.CD_GEOCODM)];
             return {
                 weight: 2,
                 opacity: 1,
                 color: 'white',
                 dashArray: '3',
-                fillOpacity: 0.7,
-                fillColor: getColor(feature.properties.density)
+                fillOpacity: isInArray(parseInt(feature.properties.CD_GEOCODM), area_light) ? 0.7 : 0.0,
+                fillColor: getColor(feature.properties.processos)
             };
         }
 
@@ -128,7 +133,7 @@
                 weight: 5,
                 color: '#666',
                 dashArray: '',
-                fillOpacity: 0.7
+                fillOpacity: isInArray(parseInt(layer.feature.properties.CD_GEOCODM), area_light) ? 0.7 : 0.0
             });
 
             if (!L.Browser.ie && !L.Browser.opera) {
@@ -159,7 +164,7 @@
 
             info.update = function (props) {
                 this._div.innerHTML = '<h4>Número esperado de processos</h4>' + (props ?
-                        '<b>' + props.name + '</b><br />' + props.density + ' people / mi<sup>2</sup>'
+                        '<b>' + props.NM_MUNICIP + '</b><br />' + props.processos + ' processos'
                         : 'Passe o mouse sobre um município');
             };
 
@@ -168,7 +173,7 @@
             legend.onAdd = function (map) {
 
                 var div = L.DomUtil.create('div', 'info legend'),
-                        grades = [0, 10, 20, 50, 100, 200, 500, 1000],
+                        grades = [0, 1, 2, 5, 10, 20, 50, 100],
                         labels = [],
                         from, to;
 
@@ -190,7 +195,9 @@
             $.getJSON(dataurl, function (data) {
                 // Add GeoJSON layer
                 geojson = L.geoJson(data, {style: style, onEachFeature: function (feature, layer) {
-                    layer.bindPopup(feature.properties.NM_MUNICIP);
+                    feature.properties.processos = processos[parseInt(feature.properties.CD_GEOCODM)];
+                    layer.bindPopup(feature.properties.NM_MUNICIP + "-" + feature.properties.CD_GEOCODM+"<br>"+
+                    feature.properties.processos + " processos.");
                     layer.on({
                         mouseover: highlightFeature,
                         mouseout: resetHighlight
@@ -207,7 +214,7 @@
             var overlayMaps = {
                 'Municípios': municipios
             };
-            var controls = L.control.layers(null, overlayMaps, {collapsed: false});
+            var controls = L.control.layers(null, overlayMaps, {collapsed: true});
             controls.addTo(map);
 
         }
