corrigi titulo da página principal

--- a/Interface/templates/mapaprocessos.html
+++ b/Interface/templates/mapaprocessos.html
@@ -41,7 +41,7 @@
 {% endblock %}
 
 
-{% block title %}<br><a href="{% url 'home' %}">Mapa de Processos</a>{% endblock %}
+{% block title %}Mapa de Processos{% endblock %}
 
 {% block content %}
     <br>
