--- a/Interface/templates/base.html
+++ b/Interface/templates/base.html
@@ -19,7 +19,7 @@
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="{% url "home" %}">Início</a></li>
+                        <li class="active"><a href="{% url "home" %}">Mapa</a></li>
 {#                        <li><a href="{% url "about" %}">Sobre o Simulador</a></li>#}
 {#                        <li><a href="{% url "contact" %}">Fale Conosco</a></li>#}
 
