--- a/Interface/templates/local.html
+++ b/Interface/templates/local.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load bootstrap3 %}
 {% block extra_head %}
     {% load static %}
     {% load leaflet_tags %}
@@ -7,7 +8,7 @@
     {% leaflet_js plugins="ALL" %}
     <style>
         .leaflet-container {
-            height: 600px;
+            height: 300px;
 
         }
 
@@ -46,5 +47,213 @@
 {% block title %}Análise Local{% endblock %}
 
 {% block content %}
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm-6 col-md-6 main">
+                {% leaflet_map "main" callback="main_map_init" %}
+            </div>
+            <div class="col-sm-6 col-md-6 main">
+                <div class="panel panel-default">
+                    <div class="panel-heading"><h3 class="panel-title">Parâmetros</h3></div>
+                    <div class="panel-body">
 
+                        <form class="form-horizontal" role="form">
+                            <div class="form-group">
+                                <label for="municipio" class="col-sm-2 control-label">Município:</label>
+                                <select id="MunSelect" name="municipio">
+                                </select>
+                            </div>
+                            <div class="form-group">
+                                <label for="HorizonteInput" class="col-sm-2 control-label">Horizonte de
+                                    Previsão:</label>
+
+                                <div class="col-sm-2">
+                                    <input type="number" class="form-control" id="HorizonteInput" placeholder="90 dias"
+                                           name="horizonte">
+                                </div>
+                                <label for="NotasToi" class="col-sm-2 control-label">Toi:</label>
+
+                                <div class="col-sm-2">
+                                    <input type="number" class="form-control" id="NotasToi" placeholder="100"
+                                           name="toi">
+                                </div>
+                                <label for="NotasCorte" class="col-sm-2 control-label">Corte:</label>
+
+                                <div class="col-sm-2">
+                                    <input type="number" class="form-control" id="NotasCorte" placeholder="100"
+                                           name="corte">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="NotasNeg" class="col-sm-2 control-label">Negativação:</label>
+
+                                <div class="col-sm-4">
+                                    <input type="number" class="form-control" id="NotasNeg" placeholder="100"
+                                           name="neg">
+                                </div>
+                                <label for="RecInput" class="col-sm-2 control-label">Prevalência de Reclamações:</label>
+
+                                <div class="col-sm-4">
+                                    <input type="number" class="form-control" id="RecInput" placeholder="30%" name="rec"
+                                           disabled>
+                                </div>
+                            </div>
+                            <button type="submit" class="btn btn-default">Atualizar previsão</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+    <script type="text/javascript">
+        function isInArray(el, array) {
+            return (array.indexOf(el) >= 0) ? true : false;
+        }
+        var arr = {{ mundict|safe }};
+        function fill_select() {
+            var sel = $("#MunSelect")
+            $(arr).each(function () {
+                sel.append($("<option>").attr('value', this[1]).text(this[0]));
+            });
+        }
+        fill_select()
+        //Geocodigos dos municípios na área de concessão da Light
+        var area_light = [3302007, 3304557, 3302858, 3305109, 3303500, 3300456, 3300308, 3306107, 3303203, 3304144, 3306305, 3305554, 3301801, 3301702, 3302270, 3303856, 3305406,
+            3306008, 3304003, 3304409, 3300407, 3303609, 3304128, 3302809, 3303955, 3302908, 3306206, 3301207, 3303708, 3304524, 3300951];
+
+        var processos = {{ processos | safe}};
+        var municipios = L.layerGroup();
+        var info = L.control();
+        var legend = L.control({position: 'bottomright'});
+        var geojson;
+        $("#NotasNeg").val({{ neg }})
+        $("#NotasToi").val({{ toi }})
+        $("#NotasCorte").val({{ corte }})
+        $("#HorizonteInput").val({{ horizonte }})
+
+        // get color depending on population density value
+        function getColor(d) {
+            return d > 1000 ? '#800026' :
+                    d > 500 ? '#BD0026' :
+                            d > 200 ? '#E31A1C' :
+                                    d > 100 ? '#FC4E2A' :
+                                            d > 30 ? '#FD8D3C' :
+                                                    d > 10 ? '#FEB24C' :
+                                                            d > 2 ? '#FED976' :
+                                                                    '#FFEDA0';
+        }
+
+        function style(feature) {
+            feature.properties.processos = processos[parseInt(feature.properties.CD_GEOCODM)];
+            return {
+                weight: 2,
+                opacity: 1,
+                color: 'white',
+                dashArray: '3',
+                fillOpacity: isInArray(parseInt(feature.properties.CD_GEOCODM), area_light) ? 0.7 : 0.0,
+                fillColor: getColor(feature.properties.processos)
+            };
+        }
+
+        function highlightFeature(e) {
+            var layer = e.target;
+
+            layer.setStyle({
+                weight: 5,
+                color: '#666',
+                dashArray: '',
+                fillOpacity: isInArray(parseInt(layer.feature.properties.CD_GEOCODM), area_light) ? 0.7 : 0.0
+            });
+
+            if (!L.Browser.ie && !L.Browser.opera) {
+                layer.bringToFront();
+            }
+
+            info.update(layer.feature.properties);
+        }
+
+        function resetHighlight(e) {
+            geojson.resetStyle(e.target);
+            info.update();
+        }
+
+        function zoomToFeature(feature) {
+            map.fitBounds(feature.getBounds());
+        }
+
+        function main_map_init(map, options) {
+            $(document).data('map', map)
+            //map._layersMaxZoom=13
+            $("#ano").text("2010")
+            var dataurl = "{% static 'rjmun.geojson' %}";
+
+            // control that shows state info on hover
+            info.onAdd = function (map) {
+                this._div = L.DomUtil.create('div', 'info');
+                this.update();
+                return this._div;
+            };
+
+            info.update = function (props) {
+                this._div.innerHTML = '<h4>Número esperado de processos</h4>' + (props ?
+                        '<b>' + props.NM_MUNICIP + '</b><br />' + props.processos + ' processos'
+                        : 'Passe o mouse sobre um município');
+            };
+
+            info.addTo(map);
+
+            legend.onAdd = function (map) {
+
+                var div = L.DomUtil.create('div', 'info legend'),
+                        grades = [0, 2, 10, 30, 100, 200, 500, 1000],
+                        labels = [],
+                        from, to;
+
+                for (var i = 0; i < grades.length; i++) {
+                    from = grades[i];
+                    to = grades[i + 1];
+
+                    labels.push(
+                            '<i style="background:' + getColor(from + 1) + '"></i> ' +
+                                    from + (to ? '&ndash;' + to : '+'));
+                }
+
+                div.innerHTML = labels.join('<br>');
+                return div;
+            };
+
+            legend.addTo(map);
+            // Download GeoJSON via Ajax
+            $.getJSON(dataurl, function (data) {
+                // Add GeoJSON layer
+                geojson = L.geoJson(data, {style: style, onEachFeature: function (feature, layer) {
+                    feature.properties.processos = processos[parseInt(feature.properties.CD_GEOCODM)];
+                    if (feature.properties.CD_GEOCODM == {{ geocodigo }}) {
+                        map.fitBounds(layer.getBounds())
+                    }
+                    layer.bindPopup(feature.properties.NM_MUNICIP + "-" + feature.properties.CD_GEOCODM + "<br>" +
+                            feature.properties.processos + " processos.");
+                    layer.on({
+                        mouseover: highlightFeature,
+                        mouseout: resetHighlight
+                    });
+
+                }
+                });
+                map.dragging.disable()
+                map.scrollWheelZoom.disable()
+                municipios.addLayer(geojson);
+                municipios.addTo(map);
+            });
+
+
+            var overlayMaps = {
+                'Municípios': municipios
+            };
+            var controls = L.control.layers(null, overlayMaps, {collapsed: true});
+            controls.addTo(map);
+
+        }
+    </script>
 {% endblock %}
