--- a/Interface/templates/base.html
+++ b/Interface/templates/base.html
@@ -20,7 +20,7 @@
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="{% url "home" %}">Mapa</a></li>
-{#                        <li><a href="{% url "about" %}">Sobre o Simulador</a></li>#}
+                        <li><a href="{% url "local" %}">Análise Local</a></li>
 {#                        <li><a href="{% url "contact" %}">Fale Conosco</a></li>#}
 
                     </ul>
