--- a/Interface/templates/base.html
+++ b/Interface/templates/base.html
@@ -19,8 +19,8 @@
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="{% url "home" %}">Mapa</a></li>
-                        <li><a href="{% url "local" %}">Análise Local</a></li>
+                        <li id="mapa"><a href="{% url "home" %}">Mapa</a></li>
+                        <li id="local"><a href="{% url "local" %}">Análise Local</a></li>
 {#                        <li><a href="{% url "contact" %}">Fale Conosco</a></li>#}
 
                     </ul>
