Removi um template não utilizado e modifiquei o título do aplicativo

--- a/Interface/templates/base.html
+++ b/Interface/templates/base.html
@@ -15,7 +15,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <img  src="{% static 'img/light.jpg' %}" height="50px" align="bottom"><a class="navbar-brand" href="{% url 'home' %}">Simulador de Processos</a>
+                    <img  src="{% static 'img/light.jpg' %}" height="50px" align="bottom"><a class="navbar-brand" href="{% url 'home' %}">Simulador de Litígios</a>
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
