Atualizei o texto do disclaimer.

--- a/Interface/templates/my_bootstrap3_base.html
+++ b/Interface/templates/my_bootstrap3_base.html
@@ -13,7 +13,7 @@
 
     <div id="footer">
         <div class="container">
-            <p class="text-muted">Este simulador é baseado em dados de litígio no período de 2009-11. <br>Não há qualquer garantia sobre a acurácia das previsões apresentadas para a presente data.</p>
+            <p class="text-muted">Este simulador é baseado em dados de litígio no período de 2009-11.</p>
         </div>
     </div>
   </body>
